plugins {
    id 'java'
    id 'war'
}

group 'by.innowise'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.9.2'
}

java {
    sourceCompatibility=JavaVersion.VERSION_21
    targetCompatibility=JavaVersion.VERSION_21
}

war {
    duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
}

wrapper {
    version="8.5"
}


tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

dependencies {
    compileOnly('jakarta.servlet:jakarta.servlet-api:5.0.0')
    compileOnly 'org.projectlombok:lombok:1.18.36'

    annotationProcessor 'org.projectlombok:lombok:1.18.36'
    annotationProcessor  'org.mapstruct:mapstruct-processor:1.6.3'


    implementation('org.hibernate:hibernate-core:6.0.2.Final')
    implementation('org.glassfish.jaxb:jaxb-runtime:3.0.2')
    implementation 'org.postgresql:postgresql:42.7.4'
    implementation 'org.projectlombok:lombok:1.18.36'
    implementation 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
    implementation 'org.mapstruct:mapstruct:1.6.3'
    implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api:3.0.2'
    implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl:3.0.1'
    implementation 'ch.qos.logback:logback-classic:1.5.12'


    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
}

test {
    useJUnitPlatform()
}